<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainLayout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:onClick="hideKeyboard"
           android:orientation="vertical"
           android:padding="16dp">

              <androidx.cardview.widget.CardView
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  app:cardCornerRadius="5dp">

                     <TextView
                         android:padding="5dp"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="5dp"
                         android:fontFamily="@font/open_sans"
                         android:text="Select Time:" />
              </androidx.cardview.widget.CardView>
              <androidx.cardview.widget.CardView
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  app:cardCornerRadius="5dp">

                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:padding="2dp"
                         android:gravity="center"
                         android:orientation="horizontal">

                            <NumberPicker
                                android:id="@+id/hoursPicker"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="8dp" />

                            <TextView
                                android:id="@+id/colon"
                                android:layout_width="wrap_content"
                                android:layout_height="180dp"
                                android:gravity="center"
                                android:text="@string/txtColon"
                                android:textSize="50sp" />

                            <NumberPicker
                                android:id="@+id/minutesPicker"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="8dp" />

                            <NumberPicker
                                android:id="@+id/timeZonePicker"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="25dp" />

                     </LinearLayout>
              </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical">

               <androidx.cardview.widget.CardView
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_marginTop="10dp"
                   app:cardCornerRadius="5dp">

                      <TextView
                          android:padding="5dp"
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:layout_marginBottom="5dp"
                          android:fontFamily="@font/open_sans"
                          android:text="Alarm Label :" />
               </androidx.cardview.widget.CardView>

               <androidx.cardview.widget.CardView
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   app:cardCornerRadius="5dp">
                      <EditText
                          android:id="@+id/edtLabel"
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:ems="10"
                          android:fontFamily="@font/open_sans"
                          android:gravity="center"
                          android:hapticFeedbackEnabled="false"
                          android:hint="@string/edtLabel"
                          android:inputType="textPersonName" />
               </androidx.cardview.widget.CardView>

               <androidx.cardview.widget.CardView
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_marginTop="10dp"
                   app:cardCornerRadius="5dp">

                      <TextView
                          android:padding="5dp"
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:layout_marginBottom="5dp"
                          android:fontFamily="@font/open_sans"
                          android:text="Select Repeat Days:" />
               </androidx.cardview.widget.CardView>

               <androidx.cardview.widget.CardView
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   app:cardCornerRadius="5dp">

                      <com.nex3z.togglebuttongroup.MultiSelectToggleGroup
                          android:id="@+id/repeat"
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:layout_marginBottom="10dp"
                          app:tbgChildSpacing="auto">

                             <com.nex3z.togglebuttongroup.button.CircularToggle
                                 android:id="@+id/sun"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="S" />

                             <com.nex3z.togglebuttongroup.button.CircularToggle
                                 android:id="@+id/mon"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="M" />

                             <com.nex3z.togglebuttongroup.button.CircularToggle
                                 android:id="@+id/tue"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="T" />

                             <com.nex3z.togglebuttongroup.button.CircularToggle
                                 android:id="@+id/wed"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="W" />

                             <com.nex3z.togglebuttongroup.button.CircularToggle
                                 android:id="@+id/thu"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="T" />

                             <com.nex3z.togglebuttongroup.button.CircularToggle
                                 android:id="@+id/fri"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="F" />

                             <com.nex3z.togglebuttongroup.button.CircularToggle
                                 android:id="@+id/sat"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="S" />
                      </com.nex3z.togglebuttongroup.MultiSelectToggleGroup>
               </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/mode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_bg"
                android:textColor="#FFFFFF"
                android:text="@string/btnMode" />

            <Button
                android:id="@+id/btnTone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_bg"
                android:textColor="#FFFFFF"
                android:text="@string/btnTone" />

            <Button
                android:id="@+id/btnSave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:background="@drawable/quiz_correct_background"
                android:textColor="#FFFFFF"
                android:text="@string/btnSave" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>